--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,9 @@ no_lines_before=STDLIB,THIRDPARTY
 sections=FUTURE,STDLIB,THIRDPARTY,myself,FIRSTPARTY,LOCALFOLDER
 default_section=FIRSTPARTY
 
+[easy_install]
+index_url=https://pypi.douban.com/simple/
+
 [flake8]
 ignore = W503, E203, E221, E402, E741, C901, W504, E731
 max-line-length = 100
@@ -15,8 +18,18 @@ max-complexity = 18
 select = B,C,E,F,W,T4,B9
 exclude = build,__init__.py
 
+
+[pep8]
+ignore = W503, E203, E221, E402, E741, C901, W504, E731
+max-line-length = 100 
+
+[yapf]
+based_on_style = pep8
+spaces_before_comment = 4
+split_before_logical_operator = true
+
 [mypy]
-python_version=3.6
+python_version=3.7
 ignore_missing_imports = True
 warn_unused_configs = True
 disallow_untyped_defs = True
