update model with support for ssv2 and semantic branch

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ default_section=FIRSTPARTY
 index_url=https://pypi.douban.com/simple/
 
 [flake8]
-ignore = W503, E203, E221, E402, E741, C901, W504, E731
+ignore = W503, E203, E221, E402, E741, C901, W504, E731, F541
 max-line-length = 100
 max-complexity = 18
 select = B,C,E,F,W,T4,B9
